# todo-rust

./: Cargo.toml  README.md  todos.db  todos.json
backend/: Cargo.toml  Dockerfile  todos.db
backend/src/: main.rs
frontend/: .env  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
src/: main.rs
